fix: adjust z-index

--- a/src/blocks/navbar.css
+++ b/src/blocks/navbar.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   position: sticky;
   top: 0px;
-  z-index: 3;
+  z-index: 4;
 }
 
 .navbar__links {
